passed final mvn test and works with any link in sample_config.json